renamed cotourt paper pdf

--- a/tex/ba-thesis.bib
+++ b/tex/ba-thesis.bib
@@ -7,7 +7,7 @@
   pages = {1},
   number = {1},
   file =
-{:/home/martin/git/martin-thesis-ba/literature/graphdb-modeling/a1-angles.pdf:PDF},
+{:..//literature/graphdb-modeling/a1-angles.pdf:PDF},
   publisher = {ACM}
 }
 @ARTICLE{Chen1976,
@@ -33,7 +33,7 @@ Kn\&uuml;pfer
 	and Camille Laibe and Michael Hucka and Nicolas Le Nov\&egrave;re},
   doi = {doi:10.1038/msb.2011.77},
   file =
-{:/home/martin/git/martin-thesis-ba/literature/sems/543.full.pdf:PDF},
+{:..//literature/sems/2011Courtot-MSB.pdf:PDF},
   publishers = {Nature Publishing Group},
   rights = {© 2011 EMBO and Macmillan Publishers Limited},
   title = {Controlled vocabularies and semantics in systems biology}
@@ -46,7 +46,7 @@ Riccardo},
   publisher = {Springer},
   year = {2014},
   pages = {172--185},
-  file = {:/home/martin/git/martin-thesis-ba/literature/graphdb-modeling/er12014.pdf:PDF}
+  file = {:..//literature/graphdb-modeling/er12014.pdf:PDF}
 }
 @INPROCEEDINGS{Ebert1994,
   author = {Ebert, J{\"u}rgen and Franzke, Angelika},
@@ -55,7 +55,7 @@ Riccardo},
   year = {1994},
   pages = {38--50},
   organization = {Springer},
-  file = {:/home/martin/git/martin-thesis-ba/literature/graphdb-modeling/chp%3A10.1007%2F3-540-59071-4_36.pdf:PDF}
+  file = {:..//literature/graphdb-modeling/chp%3A10.1007%2F3-540-59071-4_36.pdf:PDF}
 }
 @INPROCEEDINGS{Henkel2014,
   author = {Henkel, Ron and Waltemath, Dagmar},
@@ -63,7 +63,7 @@ Riccardo},
   booktitle = {SWAT4LS},
   year = {2014},
   organization = {Citeseer},
-  file = {:/home/martin/git/martin-thesis-ba/literature/sems/10.1.1.663.4565.pdf:PDF}
+  file = {:..//literature/sems/10.1.1.663.4565.pdf:PDF}
 }
 @ARTICLE{Henkel2015,
   author = {Henkel, Ron and Wolkenhauer, Olaf and Waltemath, Dagmar},
@@ -72,7 +72,7 @@ Riccardo},
   year = {2015},
   volume = {2015},
   pages = {bau130},
-  file = {:/home/martin/git/martin-thesis-ba/literature/sems/masymos.pdf:PDF},
+  file = {:..//literature/sems/masymos.pdf:PDF},
   publisher = {University Press}
 }
 @ARTICLE{Hucka2015,
@@ -84,7 +84,7 @@ Bergmann, Frank T and Cooper, Jonathan and Demir, Emek and Garny, Alan and Goleb
   year = {2015},
   volume = {3},
   pages = {19},
-  file = {:/home/martin/git/martin-thesis-ba/literature/sems/fbioe-03-00019.pdf:PDF},
+  file = {:..//literature/sems/fbioe-03-00019.pdf:PDF},
   publisher = {Frontiers}
 }
 @INPROCEEDINGS{Kohn2008,
@@ -95,14 +95,14 @@ guidelines},
   year = {2008},
   pages = {176--190},
   organization = {Springer},
-  file = {:/home/martin/git/martin-thesis-ba/literature/sems/2008Koehn-Springer Reproducible computational biology experiments with SED-ML-the simulation experiment description markup language.pdf:PDF}
+  file = {:..//literature/sems/2008Koehn-Springer Reproducible computational biology experiments with SED-ML-the simulation experiment description markup language.pdf:PDF}
 }
 @OTHER{Scharm2016,
   abstract = {Journal of Biomedical Semantics, 2016, doi:10.1186/s13326-016-0080-2},
   author = {Martin Scharm},
   year = {2016},
   doi = {10.1186/s13326-016-0080-2},
-  file = {:/home/martin/git/martin-thesis-ba/literature/sems/Biomedical-2016-Scharm-COMODI.pdf:PDF},
+  file = {:..//literature/sems/Biomedical-2016-Scharm-COMODI.pdf:PDF},
   publishers = {Journal of Biomedical Semantics},
   title = {COMODI: An ontology to characterise differences in versions of computational models in biology}
 }
@@ -112,7 +112,7 @@ guidelines},
   journal = {Bioinformatics},
   year = {2015},
   pages = {btv484},
-  file = {:/home/martin/git/martin-thesis-ba/literature/sems/Bioinformatics-2016-Scharm-563-70.pdf:PDF},
+  file = {:..//literature/sems/Bioinformatics-2016-Scharm-563-70.pdf:PDF},
   publisher = {Oxford Univ Press}
 }
 @OTHER{Siriwaradhana2014,
