--- a/tex/ba-thesis.bib
+++ b/tex/ba-thesis.bib
@@ -7,7 +7,7 @@
   pages = {1},
   number = {1},
   file =
-{:..//literature/graphdb-modeling/a1-angles.pdf:PDF},
+{:../literature/graphdb-modeling/a1-angles.pdf:PDF},
   publisher = {ACM}
 }
 @ARTICLE{Chen1976,
@@ -16,24 +16,16 @@
   journal = {ACM Transactions on Database Systems},
   year = {1976},
   volume = {Vol. 1, No. 1},
-  file = {:../../../../literature/graphdb-modeling/p9-chen.pdf:PDF},
+  file = {:../literature/graphdb-modeling/p9-chen.pdf:PDF},
   owner = {martin},
   timestamp = {2016.06.15}
 }
 @OTHER{Courtot,
   abstract = {Molecular Systems Biology 7, (2011). doi:10.1038/msb.2011.77},
   author = {M\&eacute;lanie Courtot and Nick Juty and Christian
-Kn\&uuml;pfer
-	and Dagmar Waltemath and Anna Zhukova and Andreas Dr\&auml;ger and
-	Michel Dumontier and Andrew Finney and Martin Golebiewski and Janna
-	Hastings and Stefan Hoops and Sarah Keating and Douglas B Kell and
-	Samuel Kerrien and James Lawson and Allyson Lister and James Lu and
-	Rainer Machne and Pedro Mendes and Matthew Pocock and Nicolas Rodriguez
-	and Alice Villeger and Darren J Wilkinson and Sarala Wimalaratne
-	and Camille Laibe and Michael Hucka and Nicolas Le Nov\&egrave;re},
+Kn\&uuml;pfer and Dagmar Waltemath and Anna Zhukova and Andreas Dr\&auml;ger and Michel Dumontier and Andrew Finney and Martin Golebiewski and Janna Hastings and Stefan Hoops and Sarah Keating and Douglas B Kell and Samuel Kerrien and James Lawson and Allyson Lister and James Lu and Rainer Machne and Pedro Mendes and Matthew Pocock and Nicolas Rodriguez and Alice Villeger and Darren J Wilkinson and Sarala Wimalaratne and Camille Laibe and Michael Hucka and Nicolas Le Nov\&egrave;re},
   doi = {doi:10.1038/msb.2011.77},
-  file =
-{:..//literature/sems/2011Courtot-MSB.pdf:PDF},
+  file = {:../literature/sems/2011Courtot-MSB.pdf:PDF},
   publishers = {Nature Publishing Group},
   rights = {© 2011 EMBO and Macmillan Publishers Limited},
   title = {Controlled vocabularies and semantics in systems biology}
@@ -46,7 +38,7 @@ Riccardo},
   publisher = {Springer},
   year = {2014},
   pages = {172--185},
-  file = {:..//literature/graphdb-modeling/er12014.pdf:PDF}
+  file = {:../literature/graphdb-modeling/er12014.pdf:PDF}
 }
 @INPROCEEDINGS{Ebert1994,
   author = {Ebert, J{\"u}rgen and Franzke, Angelika},
@@ -55,7 +47,7 @@ Riccardo},
   year = {1994},
   pages = {38--50},
   organization = {Springer},
-  file = {:..//literature/graphdb-modeling/chp%3A10.1007%2F3-540-59071-4_36.pdf:PDF}
+  file = {:../literature/graphdb-modeling/chp%3A10.1007%2F3-540-59071-4_36.pdf:PDF}
 }
 @INPROCEEDINGS{Henkel2014,
   author = {Henkel, Ron and Waltemath, Dagmar},
@@ -63,7 +55,7 @@ Riccardo},
   booktitle = {SWAT4LS},
   year = {2014},
   organization = {Citeseer},
-  file = {:..//literature/sems/10.1.1.663.4565.pdf:PDF}
+  file = {:../literature/sems/10.1.1.663.4565.pdf:PDF}
 }
 @ARTICLE{Henkel2015,
   author = {Henkel, Ron and Wolkenhauer, Olaf and Waltemath, Dagmar},
@@ -72,7 +64,7 @@ Riccardo},
   year = {2015},
   volume = {2015},
   pages = {bau130},
-  file = {:..//literature/sems/masymos.pdf:PDF},
+  file = {:../literature/sems/masymos.pdf:PDF},
   publisher = {University Press}
 }
 @ARTICLE{Hucka2015,
@@ -84,7 +76,7 @@ Bergmann, Frank T and Cooper, Jonathan and Demir, Emek and Garny, Alan and Goleb
   year = {2015},
   volume = {3},
   pages = {19},
-  file = {:..//literature/sems/fbioe-03-00019.pdf:PDF},
+  file = {:../literature/sems/fbioe-03-00019.pdf:PDF},
   publisher = {Frontiers}
 }
 @INPROCEEDINGS{Kohn2008,
@@ -95,14 +87,14 @@ guidelines},
   year = {2008},
   pages = {176--190},
   organization = {Springer},
-  file = {:..//literature/sems/2008Koehn-Springer Reproducible computational biology experiments with SED-ML-the simulation experiment description markup language.pdf:PDF}
+  file = {:../literature/sems/2008Koehn-Springer Reproducible computational biology experiments with SED-ML-the simulation experiment description markup language.pdf:PDF}
 }
 @OTHER{Scharm2016,
   abstract = {Journal of Biomedical Semantics, 2016, doi:10.1186/s13326-016-0080-2},
   author = {Martin Scharm},
   year = {2016},
   doi = {10.1186/s13326-016-0080-2},
-  file = {:..//literature/sems/Biomedical-2016-Scharm-COMODI.pdf:PDF},
+  file = {:../literature/sems/Biomedical-2016-Scharm-COMODI.pdf:PDF},
   publishers = {Journal of Biomedical Semantics},
   title = {COMODI: An ontology to characterise differences in versions of computational models in biology}
 }
@@ -112,7 +104,7 @@ guidelines},
   journal = {Bioinformatics},
   year = {2015},
   pages = {btv484},
-  file = {:..//literature/sems/Bioinformatics-2016-Scharm-563-70.pdf:PDF},
+  file = {:../literature/sems/Bioinformatics-2016-Scharm-563-70.pdf:PDF},
   publisher = {Oxford Univ Press}
 }
 @OTHER{Siriwaradhana2014,
@@ -120,13 +112,13 @@ guidelines},
   owner = {martin},
   timestamp = {2014.01.06},
   title = {From the entity-relationship to the property-graph model},
-  url = {https://lambdazen.blogspot.co.za/2014/01/from-entity-relationship-to-property.html},
+  url = {https:/lambdazen.blogspot.co.za/2014/01/from-entity-relationship-to-property.html},
   year = {2014}
 }
 @STANDARD{a,
   title = {neo4j Graph Data Modeling Guidelines},
   organization = {neo4j},
-  url = {http://neo4j.com/developer/guide-data-modeling/},
+  url = {http:/neo4j.com/developer/guide-data-modeling/},
   abstract = {This guide is designed to walk you through the graph data
 modeling
 	lifecycle of Neo4j. You will be introduced to the basic process of
@@ -139,33 +131,6 @@ modeling
 
 
                                                          
-@ARTICLE{Bergmann2014,
-  author = {Bergmann, Frank T and Adams, Richard and Moodie, Stuart and
-Cooper,
-	Jonathan and Glont, Mihai and Golebiewski, Martin and Hucka, Michael
-	and Laibe, Camille and Miller, Andrew K and Nickerson, David P and
-	others},
-  title = {COMBINE archive and OMEX format: one file to share all
-information
-	to reproduce a modeling project},
-  journal = {BMC bioinformatics},
-  year = {2014},
-  volume = {15},
-  pages = {369},
-  number = {1},
-  file =
-{:/home/martin/ownCloud/papers/2014/2014Bergmann-CA-and-OMEX.pdf:PDF},
-  publisher = {BioMed Central Ltd}
-}
-@MISC{Bergmann2013,
-  author = {Bergmann, Frank T and Cooper, Jonathan and Le Novere,
-Nicolas and
-	Nickerson, David and Waltemath, Dagmar},
-  title = {Simulation experiment description markup language (SED-ML): Level
-	1 version 2},
-  year = {2013},
-  file = {:/home/martin/ownCloud/papers/2013/2013-12-02 sed-ml-L1V2.pdf:PDF}
-}
 @ARTICLE{McEntyre2015,
   author = {McEntyre, Jo and Sarkans, Ugis and Brazma, Alvis},
   title = {The BioStudies database},
@@ -174,8 +139,7 @@ Nicolas and
   volume = {11},
   pages = {847},
   number = {12},
-  file = {:/home/martin/ownCloud/papers/2015/2015-12-23-MSB The
-BioStudies database.pdf:PDF},
+  file = {:/home/martin/ownCloud/papers/2015/2015-12-23-MSB The BioStudies database.pdf:PDF},
   publisher = {EMBO Press}
 }
 @ARTICLE{Olivier2004,
@@ -186,8 +150,7 @@ BioStudies database.pdf:PDF},
   volume = {20},
   pages = {2143--2144},
   number = {13},
-  file = {:/home/martin/ownCloud/papers/2004/2004-10-00-Bioinformatics
-Web-based kinetic modelling using JWS Online.pdf:PDF},
+  file = {:/home/martin/ownCloud/papers/2004/2004-10-00-Bioinformatics Web-based kinetic modelling using JWS Online.pdf:PDF},
   publisher = {Oxford Univ Press}
 }
 @ARTICLE{Scharm2015m2cat,
@@ -197,80 +160,55 @@ Web-based kinetic modelling using JWS Online.pdf:PDF},
   year = {2015},
   volume = {3},
   pages = {e792v1},
-  file =
-{:/home/martin/ownCloud/papers/2014/2014-Scharm-Waltemath-Extracting-rep.pdf:PDF},
+  file = {:/home/martin/ownCloud/papers/2014/2014-Scharm-Waltemath-Extracting-rep.pdf:PDF},
   publisher = {PeerJ Inc. San Francisco, USA}
 }
 @ARTICLE{scharm2014combinearchive,
-  author = {Scharm, Martin and Wendland, Florian and Peters, Martin and
-Wolfien,
-	Markus and Theile, Tom and Waltemath, Dagmar},
-  title = {The CombineArchive Toolkit-facilitating the transfer of research
-	results},
+  author = {Scharm, Martin and Wendland, Florian and Peters, Martin and Wolfien, Markus and Theile, Tom and Waltemath, Dagmar},
+  title = {The CombineArchive Toolkit-facilitating the transfer of research results},
   journal = {PeerJ PrePrints},
   year = {2014},
   volume = {2},
   pages = {e514v1},
-  file =
-{:/home/martin/ownCloud/papers/2014/2014-Scharm-etal-Peerj-CAT.pdf:PDF},
+  file = {:/home/martin/ownCloud/papers/2014/2014-Scharm-etal-Peerj-CAT.pdf:PDF},
   publisher = {PeerJ Inc. San Francisco, USA}
 }
 @ARTICLE{Stanford2015,
-  author = {Stanford, Natalie J and Wolstencroft, Katherine and Golebiewski,
-	Martin and Kania, Renate and Juty, Nick and Tomlinson, Christopher
-	and Owen, Stuart and Butcher, Sarah and Hermjakob, Henning and Le
-	Nov{\`e}re, Nicolas and others},
-  title = {The evolution of standards and data management practices in
-systems
-	biology},
+  author = {Stanford, Natalie J and Wolstencroft, Katherine and Golebiewski, Martin and Kania, Renate and Juty, Nick and Tomlinson, Christopher and Owen, Stuart and Butcher, Sarah and Hermjakob, Henning and Le Nov{\`e}re, Nicolas and others},
+  title = {The evolution of standards and data management practices in systems biology},
   journal = {Molecular systems biology},
   year = {2015},
   volume = {11},
   number = {12},
-  file = {:/home/martin/ownCloud/papers/2015/2015-12-23-MSB The
-evolution of standards and data management practices in systems
-biology.pdf:PDF},
+  file = {:/home/martin/ownCloud/papers/2015/2015-12-23-MSB The evolution of standards and data management practices in systems biology.pdf:PDF},
   publisher = {Wiley Online Library}
 }
 @ARTICLE{Waltemath2011a,
-  author = {Waltemath, Dagmar and Adams, Richard and Bergmann, Frank T
-and Hucka,
-	Michael and Kolpakov, Fedor and Miller, Andrew K and Moraru, Ion
-	I and Nickerson, David and Sahle, Sven and Snoep, Jacky L and others},
-  title = {Reproducible computational biology experiments with
-SED-ML-the simulation
-	experiment description markup language},
+  author = {Waltemath, Dagmar and Adams, Richard and Bergmann, Frank T and Hucka, Michael and Kolpakov, Fedor and Miller, Andrew K and Moraru, Ion I and Nickerson, David and Sahle, Sven and Snoep, Jacky L and others},
+  title = {Reproducible computational biology experiments with SED-ML-the simulation experiment description markup language},
   journal = {BMC systems biology},
   year = {2011},
   volume = {5},
   pages = {1},
   number = {1},
-  file =
-{:/home/martin/ownCloud/papers/2011/2011-Waltemath-Extracting-rep.pdf:PDF},
+  file = {:/home/martin/ownCloud/papers/2011/2011-Waltemath-Extracting-rep.pdf:PDF},
   publisher = {BioMed Central}
 }
 @ARTICLE{Waltemath2011,
-  author = {Waltemath, Dagmar and Bergmann, Frank T and Adams, Richard
-and Le
-	Novere, Nicolas},
-  title = {Simulation experiment description markup language (SED-ML): level
-	1 version 1},
+  author = {Waltemath, Dagmar and Bergmann, Frank T and Adams, Richard and Le Novere, Nicolas},
+  title = {Simulation experiment description markup language (SED-ML): level 1 version 1},
   journal = {Nature Precedings},
   year = {2011},
   file = {:/home/martin/ownCloud/papers/2011/2011-03-25 sed-ml-L1V1.pdf:PDF}
 }
 @ARTICLE{Waltemath2013,
-  author = {Waltemath, Dagmar and Henkel, Ron and H{\"a}lke, Robert and
-Scharm,
-	Martin and Wolkenhauer, Olaf},
-  title = {Improving the reuse of computational models through version
-control},
+  author = {Waltemath, Dagmar and Henkel, Ron and H{\"a}lke, Robert and Scharm, Martin and Wolkenhauer, Olaf},
+  title = {Improving the reuse of computational models through version control},
   journal = {Bioinformatics},
   year = {2013},
   volume = {29},
   pages = {742--748},
   number = {6},
-  file =
-{:/home/martin/ownCloud/papers/2013/Bioinformatics-2013-Waltemath-742-8.pdf:PDF},
+  file = {:/home/martin/ownCloud/papers/2013/Bioinformatics-2013-Waltemath-742-8.pdf:PDF},
   publisher = {Oxford Univ Press}
 }
