added command for Dagmar's comments. \dw{text} usage is explained in ba-main.tex

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -24,6 +24,8 @@
 	\tableofcontents
 	
 	\chapter{Introduction}
+	% comment command for Dagmar (defined in shortcuts.tex)
+	\dw{This is comment from Dagmar}
 	\input{introduction.tex}
 	
 	\chapter{Background}
