--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -13,4 +13,5 @@
 \newcommand{\masymos}{MaSyMoS\xspace}
 
 % TODO command
-\newcommand{\todo}[1][]{{\color{red} TODO: #1\\}}
+\newcommand{\todo}[1][]{{\color{red} TODO: #1}\\}
+\newcommand{\dw}[1]{\textbf{\color{green} DW: #1}\\}
