added new svg system-overview figure to tex

--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -1,7 +1,7 @@
 \section{Overall system architecture and services}
 cf. \ref{fig:system-overview}
 \begin{figure}
-	\includegraphics[width=\textwidth]{resources/system_overview.jpg}
+	\includegraphics[width=\textwidth]{resources/system-overview.pdf}
 	\caption{Infrastructure overview \todo[highlight the differences between optimal (proposed) infrstructure and the implementation]}
 	\label{fig:system-overview}
 \end{figure}
