more restructuring background. added shortcut Systems Biology \sysbio

--- a/tex/background.tex
+++ b/tex/background.tex
@@ -74,15 +74,17 @@
 		\item cf. \cite{Scharm2016}
 	\end{itemize}
 	
-\section{Irgendwas mit MaSyMoS und Graph-Datenbanken, glaube ich.}
+\section{Using graph databases to store \sysbio models}
 	\begin{itemize}
-		\item masymos exists
+		\item \masymos exists
 		\item graph databases (eg. neo4j) are more suitable for inhomogeneous data
 		\item queries are easier
 	\end{itemize}
 	
 	\subsection{Graph Databases}
-	neo4j
+	\begin{itemize}
+		\item \todo[explain neo4j]
+	\end{itemize}
 	
 	\subsection{Graph Database schema and the Entity Relation model}
 	\begin{itemize}
@@ -104,7 +106,7 @@
 	\item cf. \cite{Siriwaradhana2014}
 	\end{itemize}
 	
-	\subsection{MaSyMoS}
+	\subsection{\masymos}
 	% following some quotes from the Henkel2015 paper
 	\begin{itemize}
 	\item This work is based on MaSyMoS, "a graph database for simulation models and associated data" \cite{Henkel2015}
