--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -11,6 +11,7 @@
 \newcommand{\combine}{COMBINE\xspace}
 \newcommand{\ca}{\combine~archive\xspace}
 \newcommand{\masymos}{MaSyMoS\xspace}
+\newcommand{\sysbio}{System Biology\xspace}
 
 % TODO command
 \newcommand{\todo}[1][]{{\color{red} TODO: #1}\\}
