extended structure in concept, impl and results chapters

--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -1,8 +1,12 @@
 \section{Overall system architecture and services}
-cf. \ref{fig:system-overview}
-\begin{figure}
+\begin{itemize}
+	\item cf. \ref{fig:system-overview}
+	\item \todo[highlight the differences between optimal (proposed) infrstructure and the implementation]
+\end{itemize}
+
+\begin{figure}[h]
 	\includegraphics[width=\textwidth]{resources/system-overview.pdf}
-	\caption{Infrastructure overview \todo[highlight the differences between optimal (proposed) infrstructure and the implementation]}
+	\caption{Infrastructure overview}
 	\label{fig:system-overview}
 \end{figure}
 
@@ -18,7 +22,8 @@ cf. \ref{fig:system-overview}
 	\subitem higher storage consumption
 \item extended storage model
 \end{itemize}
-\begin{figure}
+
+\begin{figure}[h]
 	\includegraphics[width=\textwidth]{resources/db_structure.jpg}
 	\caption{Proposed database structure}
 	\label{fig:db-model}
