--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -1,5 +1,24 @@
-% concrete, low-level stuff
-% what was used, version numbers, etc.
-% pretty short
-% every subproject gets a chapter
-\todo
+\todo[concrete, low-level stuff]
+\todo[what was used, version numbers, etc.]
+\todo[pretty short, every subproject gets a section]
+
+\section{ModelCrawler}
+	\todo[to be decided]
+
+\section{Extension to the \masymos core}
+	\begin{itemize}
+		\item generic ontology import for COMODI
+		\item some helper methods/functions
+	\end{itemize}
+
+\section{\masymos diff plugin}
+	\begin{itemize}
+		\item interaction with \bives and neo4j
+	\end{itemize}
+
+\section{\rest interface and scheduling}
+	\begin{itemize}
+		\item \rest interface for requesting diffs
+		\item time based trigger for generating diffs for new versions
+	\end{itemize}
+
