--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -10,8 +10,12 @@
 \newcommand{\numl}{NuML\xspace}
 \newcommand{\combine}{COMBINE\xspace}
 \newcommand{\ca}{\combine~archive\xspace}
+
 \newcommand{\masymos}{MaSyMoS\xspace}
+\newcommand{\bives}{BiVeS\xspace}
+
 \newcommand{\sysbio}{System Biology\xspace}
+\newcommand{\rest}{REST\xspace}  % like in REST interface
 
 % TODO command
 \newcommand{\todo}[1][]{{\color{red} TODO: #1}\\}
