--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -8,6 +8,7 @@
 	\subitem refs to reproducible science
 \item Reproducibility
 	\subitem \sedml scripts fails, when model changes
+	\subitem cf. (Casadevall and Fang, 2010; Gentleman, 2005; Laine et al., 2007; Mesirov, 2010; Peng, 2011; Sandve et al., 2013; Waltemath et al., 2011, 2013b) \\ refs shameless stolen from bives paper discussion section
 
 \item Transparency
 \item Tracking differences (Provenance)
