switched bib to zoteror. cite keys haven't changed, but this bib automatically updated form Zotero

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -46,7 +46,8 @@
 	\chapter{Outlook}
 	\input{outlook.tex}
 	
-	\bibliography{ba-thesis.bib}
+	%\bibliography{ba-thesis.bib}
+	\bibliography{zotero.bib}
 	\bibliographystyle{alpha}
 	
 	\begin{appendix}
