--- a/tex/background.tex
+++ b/tex/background.tex
@@ -13,6 +13,8 @@
 	\subsection{Unix Diff}
 	\begin{itemize}
 		\item Based on solving the longest common subsequence problem
+		\item "The program diff reports differences between two files, expressed as a minimal list of line changes to bring either file into agreement with the other" \cite{Hunt1976}
+		\item "The central algorithm of diff solves the ‘longest common subsequence problem’ to 		find the lines that do not change between files" \cite{Hunt1976}
 	\end{itemize}
 	
 	\subsection{XML Diff}
