changed todo[] to todo{}

--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -1,9 +1,9 @@
-\todo[concrete, low-level stuff]
-\todo[what was used, version numbers, etc.]
-\todo[pretty short, every subproject gets a section]
+\todo{concrete, low-level stuff}
+\todo{what was used, version numbers, etc.}
+\todo{pretty short, every subproject gets a section}
 
 \section{ModelCrawler}
-	\todo[to be decided]
+	\todo{to be decided}
 
 \section{Extension to the \masymos core}
 	\begin{itemize}
