--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -18,5 +18,5 @@
 \newcommand{\rest}{REST\xspace}  % like in REST interface
 
 % TODO command
-\newcommand{\todo}[1][]{{\color{red} TODO: #1}\\}
+\newcommand{\todo}[1]{{\color{red} TODO: #1}\\}
 \newcommand{\dw}[1]{\textbf{\color{green} DW: #1}\\}
