--- a/tex/results.tex
+++ b/tex/results.tex
@@ -1,3 +1,3 @@
-\todo[what's done from the concept]
-\todo[still high-level]
-\todo[what problem is solved?]
+\todo{what's done from the concept}
+\todo{still high-level}
+\todo{what problem is solved?}
