a missing 'a' in demonstration of \dw command

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -25,7 +25,7 @@
 	
 	\chapter{Introduction}
 	% comment command for Dagmar (defined in shortcuts.tex)
-	\dw{This is comment from Dagmar}
+	\dw{This a is comment from Dagmar}
 	\input{introduction.tex}
 	
 	\chapter{Background}
