--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -11,11 +11,14 @@
 	\subitem cf. (Casadevall and Fang, 2010; Gentleman, 2005; Laine et al., 2007; Mesirov, 2010; Peng, 2011; Sandve et al., 2013; Waltemath et al., 2011, 2013b) \\ refs shameless stolen from bives paper discussion section
 
 \item Transparency
+	\subitem "Tracking the evolution of a model, that is providing information about changes in the model and its encoding, plays an important role in supporting the user " \cite{Scharm2015}
 \item Tracking differences (Provenance)
 	\subitem what has changed
 	\subitem who has changed it
 	\subitem oxford2012 + first bives paper
-	
+
+\item "distribution of models through these repositories accelerates collaborative research and encourages model reuse" \cite{Scharm2015}
+
 \item Doing analysis of the evolution of a biological model
 \item provide a comprehensive repository of biological models and their history
 \item discover similarities and differences in the development of model through Ontology crosslinking
